--- a/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
+++ b/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
@@ -5131,7 +5131,8 @@
                                          .replace('أوفا3', '')
                                          .replace('أوفا', '')
                                          .replace('إصدار خاص', '')
-                                         .replace('ماجيك كايتو', '')
+                                         .replace('ماجيك كايتو1', '')
+                                         .replace('ماجيك كايتو2', '')
                                          .replace('يوميات زيرو', '')
                                          .replace('المجرم هانزاوا', '')
                                          .trim() }}
