--- a/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
+++ b/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
@@ -5136,6 +5136,8 @@
                                          .replace('يوميات زيرو', '')
                                          .replace('المجرم هانزاوا', '')
                                          .trim() }}
+                                    <span v-if="selectedEpisode.EpisodeNumber.includes('ماجيك كايتو1')"> (ج1)</span>
+                                    <span v-if="selectedEpisode.EpisodeNumber.includes('ماجيك كايتو2')"> (ج2)</span>
                                 </p>
                                 
                                 <p v-if="selectedEpisode" class="mb-2 text-lg">
