--- a/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
+++ b/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
@@ -4843,9 +4843,9 @@
                     </div>
                 </div>
             </div>   
-                     
+
             <fieldset class="border p-4 rounded w-full">
-                <legend class="font-bold text-lg px-2 mb-2">مستطيل البحث</legend>
+                <legend class="font-bold text-lg px-2">مستطيل البحث</legend>
             
                 <!-- Search Input and Button with margin-bottom -->
                 <div class="flex items-center w-full mb-4">
