--- a/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
+++ b/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
@@ -4855,19 +4855,19 @@
             
                 <!-- Centered Checkboxes -->
                 <div class="flex flex-wrap gap-4 mt-2 justify-center">
-                    <label class="flex items-center px-2">
+                    <label class="flex items-center space-x-2">
                         <input type="checkbox" v-model="searchFilters.title" class="scale-150" @change="ensureOneChecked('title')">
                         <span class="px-2 font-bold">العنوان</span>
                     </label>
-                    <label class="flex items-center px-2">
+                    <label class="flex items-center space-x-2">
                         <input type="checkbox" v-model="searchFilters.number" class="scale-150" @change="ensureOneChecked('number')">
                         <span class="px-2 font-bold">الرقم</span>
                     </label>
-                    <label class="flex items-center px-2">
+                    <label class="flex items-center space-x-2">
                         <input type="checkbox" v-model="searchFilters.story" class="scale-150" @change="ensureOneChecked('story')">
                         <span class="px-2 font-bold">القصة</span>
                     </label>
-                    <label class="flex items-center px-2">
+                    <label class="flex items-center space-x-2">
                         <input type="checkbox" v-model="searchFilters.summary" class="scale-150" @change="ensureOneChecked('summary')">
                         <span class="px-2 font-bold">الملخص</span>
                     </label>
