--- a/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
+++ b/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
@@ -8791,6 +8791,8 @@
                     })
                     .filter(episode => {
                         if (this.searchFilters.number) {
+                            if (searchQuery === "") return true; // ✅ Show all episodes when search bar is empty
+                            
                             // Split the search query into an array of numbers (remove spaces)
                             const numbers = searchQuery.split(',').map(num => num.trim()).filter(num => num !== '');
                             return numbers.some(num => episode.EpisodeNumber === num);
